# Sterope

./: .gitignore  CMakeLists.txt  DesignDocument.md  PLANNING.md  README.md  index.html
main/etc/saveData/: defaultControls.ini
main/include/: utils.h  window.h
main/include/core/: utils.h  window.h
main/include/etc/GLAD/glad/: gl.h
main/include/etc/SDL2/: SDL_scancode.h
main/include/main/: eventSys.h  input.h  io.h  logging.h  main.h  multithreading.h  renderer.h  utils.h  windowGl.h  windowManager.h  windowSDL2.h
main/src/: gl.c  main.c  window.c
main/src/main/: GL.c  SDL.c  eventSys.c  input.c  io.c  logging.c  main.c  renderer.c  windowGL.c  windowGl.c  windowManager.c  windowSDL.c  windowSDL2.c
pages/: 00-00-home.html  home.html
scripts/local/css/: 00-00-general.css  general.css  home.css  index.css
scripts/local/js/: 00-00-general.js  01-00-index.js  general.js  index.js  logging.js
site/data/downloads/: readme.txt
